@@ -1,3 +1,8 @@
+2011-11-08 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
+	* tag V01-05-82
+	* Add new tab in right lower panel with a list of sequences containing 
+	  the selected module. (bug 88620).
+
 2011-11-07 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
 	* tag V01-05-81
 	* Save value of the parameter that is being edited when clicking 
